--- a/items/templates/items/catalog.html
+++ b/items/templates/items/catalog.html
@@ -75,7 +75,7 @@
   <div class=" pt-3">
     {% for item in items %}
       <div class="d-flex flex-row mb-3 justify-content-center">
-    <div class="card wrapper p-2 position-relative" style="width: 20rem; height: 560px;" >
+    <div class="card wrapper p-2 position-relative" style="width: 20rem; height: 600px;" >
       {% if item.image %}
       <img src="{{ item.image.url }}" class="card-img-top img_card" alt="{{ item.name }}">
       {% else %}
@@ -117,8 +117,9 @@
         <p>id: {{ item.display_id }}</p>
 
 <!--        <p>Скидка: {{ item.discount }}%</p>-->
-        <a href="#" class="btn btn-primary">Купить</a>
+
       </div>
+              <a href="#" class="btn btn-primary align-self-end mb-1">Купить</a>
         </div>
       {% endfor %}
     </div>
